<resources>
    <string name="app_name">StepApp</string>
    <string name="imooc_step">小慕计步器</string>
    <string name="welcome_tips">每天一万步\n走出健康路</string>
    <string name="skip">跳过</string>
    <string name="IMOOC计步器">IMOOC计步器</string>
    <string name="setting">setting</string>
    <string name="calorie">大卡</string>
    <string name="kilometre">公里</string>
    <string name="activity_time">活动时间</string>
    <string name="calorie_value">0.00卡</string>
    <string name="activity_time_value">0分</string>
    <string name="kilometre_value">0.00</string>
    <string name="step_number">0步</string>
    <string name="target">目标：10000步</string>
    <string name="start">启动</string>
    <string name="reset">重置</string>
    <string name="image">image</string>
</resources>